[package]
name = "product_similarity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-appender = "0.2.0"
tracing-subscriber = "0.3.0"

serde = { version = "1.0.197", features = ["derive", "serde_derive", "alloc"] }
serde_json = { version = "1.0.114" }

rayon = "1.9.0"
strsim = "0.11.0"
